@@ -12,91 +12,76 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Phaser;
+import java.util.concurrent.Semaphore;
 
 
 public class Indexing {
-    private static Indexing app;
+    public static int threadsSize;
+    public static final String STATISTICS_BLUE = "\033[01;34m";
+    public static final String RESET_COLOR = "\033[0m";
 
+    private static Indexing app;
     private static final int DEFAULT_M_WORDS = 1000;
-    private static final int DEFAULT_VIRTUAL_THREAD_FACTOR = 150; // multiplies this value to number of files in order to create more Virtual Threads.
     private static final String DEFAULT_INDEX_DIR = "." + File.separator + "Index" + File.separator;
 
     private final String inputDirPath;
     private final String indexDirPath;
-    private final int virtualThreadFactor;
     private final int M;
 
     private final HashMap<Long, String> filesIdsMap = new HashMap<>(); // filesIds Data Structure
     private final HashMap<Location, String> fileLines = new HashMap<>(); // fileLines Data Structure
-    private final ArrayList<ConcurrentHashMap<Location, String>> sameSizeFileLines = new ArrayList<>(); // Rescaled in order to force each virtual thread does the same work.
+    private final ArrayList<HashMap<Location, String>> sameSizeFileLines = new ArrayList<>(); // Rescaled in order to force each virtual thread does the same work.
 
-    private final ArrayList<ConcurrentHashMap<String, String>> unsortedInvertedIndex = new ArrayList<>();
+    private final ArrayList<HashMap<String, String>> unsortedInvertedIndex = new ArrayList<>();
     private HashMap<String, ArrayList<String>> invertedIndex = new HashMap<>(); // invertedIndex Data Structure
 
-    private Thread fileIdSaver;
-    private Thread fileFinder;
-    private Thread[] linesContentVirtualThreads;
-    private ReadFile[] readFilesTasks;
-    private Thread[] invertedIndexBuilders;
-    private InvertedIndexBuilder[] invertedIndexTasks;
-    private Thread[] indexFilesBuilders;
 
     public Indexing(String inputDirPath) {
         this.inputDirPath = inputDirPath;
         this.indexDirPath = DEFAULT_INDEX_DIR;
-        this.virtualThreadFactor = DEFAULT_VIRTUAL_THREAD_FACTOR;
         this.M = DEFAULT_M_WORDS;
     }
 
     public Indexing(String inputDirPath, String indexDirPath) {
         this.inputDirPath = inputDirPath;
         this.indexDirPath = indexDirPath;
-        this.virtualThreadFactor = DEFAULT_VIRTUAL_THREAD_FACTOR;
         this.M = DEFAULT_M_WORDS;
     }
 
-    public Indexing(String inputDirPath, String indexDirPath, int virtualThreadFactor, int M) {
+    public Indexing(String inputDirPath, String indexDirPath, int M) {
         this.inputDirPath = inputDirPath;
         this.indexDirPath = indexDirPath;
-        this.virtualThreadFactor = virtualThreadFactor;
         this.M = M;
     }
 
     public static void setApp(Indexing app) { Indexing.app = app; }
 
     public static void main(String[] args) throws InterruptedException {
-        if (args.length == 5) {
-            app = new Indexing(args[1], args[2], Integer.parseInt(args[3]), Integer.parseInt(args[4]));
+        if (args.length == 4) {
+            app = new Indexing(args[1], args[2], Integer.parseInt(args[3]));
         } else if (args.length == 3)
             app = new Indexing(args[1], args[2]);
         else if (args.length == 2)
-            app = new Indexing(args[0]);
+            app = new Indexing(args[1]);
         else
             printUsage();
 
         Instant start = Instant.now();
 
-        app.searchTxtFiles(app.inputDirPath);
-        app.joinThread(app.fileFinder);
-        app.saveFileIds();
+        app.searchTxtFiles(app.inputDirPath); // 1 Thread. Busca fitxers txt i fica en estructura dades
+        app.saveFileIds(); // 1 Thread. Llegeix de estructura dades i crea el arxiu ID-PATH.TXT (FINS AQUI RES DESTADISTIQUES)
 
-        app.buildFileLinesContent();
-        app.joinThreads(app.linesContentVirtualThreads);
-        app.addToGlobalLinesContent();
-
-        // ------------------------- FINS AQUI FET ---------------------------------------------------
+        app.buildFileLinesContent(); // 24 Threads. Envia una tasca FILE_ID-PATH a que cada fil fiqui location(FILE_ID, lineNumber)-lineContent en una estructura dades local
         app.constructFileLinesContent();
-        app.constructSameSizeFileLines();
+        app.constructSameSizeFileLines(); // Mapes de la mateixa mida (Location-lineContent)
 
         app.constructInvertedIndex();
-        app.joinThreads(app.invertedIndexBuilders);
-        app.addToGlobalUnsortedInvertedIndex();
         app.invertedIndex = app.sortGlobalInvertedIndex();
 
         app.generateInvertedIndexFiles();
-        app.joinThreads(app.indexFilesBuilders);
-        app.joinThread(app.fileIdSaver);
+        app.printFinalStatistics();
 
         Instant end = Instant.now();
         System.out.println("Time to build the Inverted Index: " +
@@ -109,12 +94,9 @@ public class Indexing {
     public int getM() { return M;}
     public HashMap<Long, String> getFilesIdsMap() { return filesIdsMap; }
     public HashMap<Location, String> getFileLines() { return fileLines; }
-    public ArrayList<ConcurrentHashMap<Location, String>> getSameSizeFileLines() { return sameSizeFileLines;}
+    public ArrayList<HashMap<Location, String>> getSameSizeFileLines() { return sameSizeFileLines;}
     public HashMap<String, ArrayList<String>> getInvertedIndex() { return invertedIndex; }
-    public Thread getFileFinder() { return fileFinder; }
-    public Thread[] getIndexFilesBuilders() { return indexFilesBuilders; }
-    public Thread[] getInvertedIndexBuilders() { return invertedIndexBuilders; }
-    public Thread[] getLinesContentVirtualThreads() { return linesContentVirtualThreads; }
+    public ArrayList<HashMap<String, String>> getUnsortedInvertedIndex() { return unsortedInvertedIndex;}
 
     /**
      * For each file in inputPath a virtual thread is launched and searches for .txt files. Also removes the 'Input' dir.
@@ -128,13 +110,15 @@ public class Indexing {
         File inputFile = new File(inputPath);
         File[] files = inputFile.listFiles();
 
-
         if (files != null) {
+            CountDownLatch latch = new CountDownLatch(1);
             SearchFiles.app = app;
             try{
-                fileFinder = Thread.startVirtualThread(new SearchFiles(files));
-            } catch (OutOfMemoryError e){
-                cancel(e);
+                Thread.startVirtualThread(new SearchFiles(files, latch));
+                latch.await();
+            } catch (OutOfMemoryError | InterruptedException e){
+                assert e instanceof OutOfMemoryError;
+                cancel((OutOfMemoryError) e);
             }
         }
     }
@@ -145,42 +129,41 @@ public class Indexing {
     public void saveFileIds() {
         SaveFileIds.app = app;
         SaveFileIds.appIndexDir = app.indexDirPath;
+        CountDownLatch latch = new CountDownLatch(1);
         try{
-            fileIdSaver = Thread.startVirtualThread(new SaveFileIds());
-        } catch (OutOfMemoryError e){
-            cancel(e);
+            Thread.startVirtualThread(new SaveFileIds(latch));
+            latch.await();
+        } catch (OutOfMemoryError | InterruptedException e){
+            assert e instanceof OutOfMemoryError;
+            cancel((OutOfMemoryError) e);
         }
     }
 
+
+    static Semaphore semaphore = new Semaphore(0);
     /**
      * Constructs the 'FileIds' txt file which contains lines of the form [id fullTxtFilePath].
      */
     public void buildFileLinesContent() {
-        linesContentVirtualThreads = new Thread[filesIdsMap.size()];// OJO 2 task
-        readFilesTasks = new ReadFile[filesIdsMap.size()];
         ReadFile.app = app;
         int i = 0, j = 0;
         for (Map.Entry<Long, String> entry : filesIdsMap.entrySet()) {
             Long fileId = entry.getKey();
             String fullPath = entry.getValue();
             ReadFile currentTask = new ReadFile(fileId, new File(fullPath));
-            readFilesTasks[i++] = currentTask;
             try {
-                linesContentVirtualThreads[j++] = Thread.startVirtualThread(currentTask); // 2 task
+                Thread.startVirtualThread(currentTask); // 2 task
             } catch (OutOfMemoryError e){
                 cancel(e);
             }
         }
-    }
-
-    /**
-     * Adds local tasks DS to global DS.
-     */
-    public void addToGlobalLinesContent(){
-        for (ReadFile task: readFilesTasks){
-            fileLines.putAll(task.getLocalFilesLinesContent());
+        try {
+            semaphore.acquire(filesIdsMap.size());
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
         }
     }
+
 
     /**
      * Generates FileLinesContent.txt file iterating fileLines global data structure.
@@ -204,7 +187,7 @@ public class Indexing {
     public void constructSameSizeFileLines() {
         List<Map.Entry<Location, String>> fileLinesEntries = new ArrayList<>(fileLines.entrySet());
         int totalEntries = fileLinesEntries.size();
-        int parts = filesIdsMap.size() * app.virtualThreadFactor;
+        int parts = filesIdsMap.size();
         int entriesPerPart = totalEntries / parts;
 
         for (int i = 0; i < parts; i++) {
@@ -216,7 +199,7 @@ public class Indexing {
 
             List<Map.Entry<Location, String>> partEntries = fileLinesEntries.subList(beginIndex, endIndex);
 
-            ConcurrentHashMap<Location, String> partMap = new ConcurrentHashMap<>();
+            HashMap<Location, String> partMap = new HashMap<>();
             for (Map.Entry<Location, String> entry : partEntries) {
                 partMap.put(entry.getKey(), entry.getValue());
             }
@@ -224,30 +207,25 @@ public class Indexing {
         }
     }
 
+    static Phaser phaser;
     /**
      * Constructs the final inverted index concurrently.
      */
     public void constructInvertedIndex() {
-        invertedIndexBuilders = new Thread[filesIdsMap.size() * app.virtualThreadFactor];
-        invertedIndexTasks = new InvertedIndexBuilder[filesIdsMap.size() * app.virtualThreadFactor];
+        threadsSize = filesIdsMap.size();
+        phaser = new Phaser(threadsSize + 1);
+
         int i = 0, j = 0;
-        for (ConcurrentHashMap<Location, String> map : sameSizeFileLines) {
-            InvertedIndexBuilder currentTask = new InvertedIndexBuilder(map);
-            invertedIndexTasks[i++] = currentTask;
+        int id = 1;
+        for (HashMap<Location, String> map : sameSizeFileLines) {
+            InvertedIndexBuilder currentTask = new InvertedIndexBuilder(id++,this, map);
             try{
-                invertedIndexBuilders[j++] = Thread.startVirtualThread(currentTask);
+                Thread.startVirtualThread(currentTask);
             } catch (OutOfMemoryError e){
                 cancel(e);
             }
         }
-    }
-
-    /**
-     * Adds local tasks DS to global DS.
-     */
-    public void addToGlobalUnsortedInvertedIndex(){
-        for (InvertedIndexBuilder task: invertedIndexTasks)
-            unsortedInvertedIndex.add(task.getLocalInvertedIndex());
+        phaser.arriveAndAwaitAdvance();
     }
 
     /**
@@ -257,7 +235,7 @@ public class Indexing {
     public HashMap<String, ArrayList<String>> sortGlobalInvertedIndex() {
         HashMap<String, ArrayList<String>> invertedIndex = new HashMap<>();
 
-        for (ConcurrentHashMap<String, String> map : unsortedInvertedIndex) { // iterate each map
+        for (HashMap<String, String> map : unsortedInvertedIndex) { // iterate each map
             for (Map.Entry<String, String> entry : map.entrySet()) {
                 String word = entry.getKey();
                 String locations = entry.getValue();
@@ -274,13 +252,13 @@ public class Indexing {
         return invertedIndex;
     }
 
+    static CountDownLatch latch = new CountDownLatch(threadsSize);
     /**
      * Generates threads that do the same amount of work and build the IndexFile_x.txt files.
      */
-    public void generateInvertedIndexFiles() {
+    public void generateInvertedIndexFiles() throws InterruptedException {
         int numberOfFiles = filesIdsMap.size();
 
-        indexFilesBuilders = new Thread[numberOfFiles];
         String commonFileName = "IndexFile";
         String directoryPath = this.indexDirPath + File.separator;
         long id = 1L;
@@ -299,11 +277,12 @@ public class Indexing {
             List<Map.Entry<String, ArrayList<String>>> partInvertedIndex = new ArrayList<>
                     (invertedIndex.entrySet()).subList(beginIndex, endIndex);
             try{
-                indexFilesBuilders[i] = Thread.startVirtualThread(new IndexFileBuilder(directoryPath, filename, partInvertedIndex));
+                Thread.startVirtualThread(new IndexFileBuilder(directoryPath, filename, partInvertedIndex));
             } catch (OutOfMemoryError e){
                 cancel(e);
             }
         }
+        latch.await();
     }
 
     /**
@@ -330,7 +309,6 @@ public class Indexing {
 
     /**
      * Recursively deletes a file.
-     *
      * @param file root file to delete recursively.
      */
     private void recursiveDelete(File file) {
@@ -345,41 +323,55 @@ public class Indexing {
         file.delete();
     }
 
-    /**
-     * Joins a single thread.
-     *
-     * @param t
-     * @throws InterruptedException
-     */
-    public void joinThread(Thread t) throws InterruptedException {
-        t.join();
-    }
 
     /**
      * Simply prints usage if the user has introduced wrong arguments.
      */
     private static void printUsage() {
         System.err.println("Error in parameters. At least one argument (source directory) is needed.");
-        System.err.println("Usage: Indexing <SourceDirectory> [<IndexDirectory>] [<StatisticsAfterM_Words>]");
+        System.err.println("Usage: Indexing --enable-preview <SourceDirectory> [<IndexDirectory>] [<StatisticsAfterM_Words>]");
         System.exit(1);
     }
 
-    /**
-     * Joins threads that are executing a common task.
-     * @throws InterruptedException
-     */
-    public void joinThreads(Thread[] threads) throws InterruptedException {
-        for (Thread t : threads) {
-            try {
-                t.join();
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
-        }
-    }
+
 
     private static void cancel(OutOfMemoryError e){
         e.printStackTrace();
         System.exit(1);
+    }
+
+    int mostPopularFinalWordAppearances = 0;
+    private void printFinalStatistics(){
+        System.out.print(STATISTICS_BLUE);
+        System.out.println("_____________________________________ " + "[Finals]" + " ____________________________________________________________________________________________________");
+        System.out.printf("__ Processed Files:              %-10s__ Processing Files:          %-10s__ Processed Lines:   %-10s__ Processed Words: %-10s__%n", app.getFilesIdsMap().size(), 0, InvertedIndexBuilder.getGlobalProcessedLines(), app.invertedIndex.size());
+        System.out.printf("__ Processed Locations:          %-10s__ Found Keys:                %-10s__ Most Popular word: %-10s__ Locations:       %-10s__%n", InvertedIndexBuilder.getGlobalProcessedLocations(), app.invertedIndex.size(), app.computeFinalMostPopularWord(), mostPopularFinalWordAppearances);
+        System.out.println("___________________________________________________________________________________________________________________________________________________");
+        System.out.print(RESET_COLOR);
+    }
+
+    private String computeFinalMostPopularWord() {
+        HashMap<String, Integer> wordLocationCount = new HashMap<>();
+
+        for (HashMap<String, String> invertedIndex : unsortedInvertedIndex) {
+            for (String word : invertedIndex.keySet()) {
+                String locations = invertedIndex.get(word);
+                int count = locations.split(",").length;
+
+                wordLocationCount.put(word, wordLocationCount.getOrDefault(word, 0) + count);
+            }
+        }
+
+        String wordWithMostLocations = null;
+        int maxLocations = 0;
+        for (String word : wordLocationCount.keySet()) {
+            int locations = wordLocationCount.get(word);
+            if (locations > maxLocations) {
+                maxLocations = locations;
+                wordWithMostLocations = word;
+            }
+        }
+        mostPopularFinalWordAppearances = maxLocations;
+        return wordWithMostLocations;
     }
 }
